src/components/PhoneDetail/PhoneDetails.module.css
.container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 1rem 48px;
}

@media (min-width: 768px) {
    .container {
        flex-direction: row;
    }
}

.gallery {
    position: relative;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.backButton {
    position: absolute;
    left: 0;
    top: 0;
}

.mainImage {
    width: 100%;
    height: 400px;
    object-fit: scale-down;
}

.info {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.title {
    font-size: 1.5rem;
    font-weight: 200;
}

.basePrice {
    font-size: 0.9rem;
    color: #666;
    margin-bottom: 3rem;
}

.section {
    margin-top: 1rem;
    h3 {
        font-size: 0.75rem;
        margin-bottom: 1rem;
    }
}

.colors {
    display: flex;
    gap: 0.5rem;
    margin-bottom: 2rem;
}

.colorSwatch {
    width: 32px;
    height: 32px;
    border: 2px solid #ccc;
    cursor: pointer;
}

.colorSwatch.selected {
    border-color: black;
}

.storages {
    display: flex;
}

.storageOption {
    padding: 1rem 1rem;
    border: 1px solid #ccc;
    background: white;
    width: 95px;
    cursor: pointer;
}

.storageOption.selected {
    border-color: black;
    background-color: #f0f0f0;
}

.price {
    font-size: 1rem;
    font-weight: bold;
}

.addButton {
    padding: 0.75rem;
    width: 380px;
    background-color: black;
    color: white;
    border: none;
    cursor: pointer;
}

.addButton:disabled {
    background-color: #999;
    cursor: not-allowed;
}

@media (max-width: 640px) {
    .container {
        padding: 1rem 1rem;
        gap: 0;
    }
}

